--- a/build.gradle
+++ b/build.gradle
@@ -24,26 +24,10 @@ dependencies {
 	}
 }
 
+jar {
+	enabled = true
+}
 
 test {
 	useJUnitPlatform()
-}
-
- String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'ovoh1'
-
-import com.amazonaws.services.cloudformation.model.Capability
-
-aws {
-    region = findProperty('region') ?: 'us-east-1'
-}
-
-cloudFormation {
-    stackName "$project.name-stack"
-    stackParams([
-            SubnetID: findProperty('subnetId') ?: '',
-            ServiceName: project.name,
-            ServiceVersion: project.version,
-            DockerHubUsername: dockerHubUsernameProperty
-    ])
-    templateFile project.file("ecs.yml")
 }
